# bishe

./: 1.c  1.dot  1.out  1.ps  1.rb  1.tmp  1.txt  10.c  10.dot  10.ps  10.taint  10.tmp  10area.c  10else.c  10for.c  10for.dot  10for.ps  10for.txt  10if.c  10while.c  11.c  11.ps  11.tmp  11.txt  111.dot  1113readme.txt  112.txt  1201.txt  1201.txt~  1_1.dot  1_1.ps  1_1.tmp  1_3.c  1_3.dot  1_3.ps  1_a.c  1_a.txt  1_b.c  1_b.dot  1_b.ps  (+176 more)
doc/: 1.txt  1.txt~  2.txt  2.txt~  3.txt  总结.docx  总结.odt
latex/: 1.tex  1201.txt  1201.txt~  1201_张海宁总结.txt
lib/: 1.out  compiler_state.c  compiler_state.h  deal_arg.c  deal_arg.h  error.c  error.h  makefile  scope.c  scope.h  test.c
lib/node/: node.c  node.h  node_tree.c  node_tree.h  node_type.c  node_type.h
lib/semantic/: declaration_specifiers.c  declaration_specifiers.h
lib/symbol/: .deal_instruction.c.swp  .smbl_function_definition.h.swp  1.c  1.c~  2  add_table.txt  deal_instruction.c  deal_instruction.c~  deal_instruction.h  instruction_type.c  instruction_type.h  readme.txt  smbl_function_definition.c  smbl_function_definition.c.swp  smbl_function_definition.c~  smbl_function_definition.h  swp  symbol.c  symbol.c~  symbol.h  taint_mark.h  test.c  tmp.c
lib/symbol/statement/: statement.h
ppt/: 20151115.ppt
tmp/: 0.c  1.c  1.out  2.c  2.out
