cmake_minimum_required(VERSION 3.3)
project(test3)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    lib/node/node.c
    lib/node/node.h
    lib/node/node_tree.c
    lib/node/node_tree.h
    lib/node/node_type.c
    lib/node/node_type.h
    lib/semantic/declaration_specifiers.c
    lib/semantic/declaration_specifiers.h
    lib/symbol/statement/statement.h
    lib/symbol/1.c
    lib/symbol/deal_instruction.c
    lib/symbol/deal_instruction.h
    lib/symbol/instruction_type.c
    lib/symbol/instruction_type.h
    lib/symbol/smbl_function_definition.c
    lib/symbol/smbl_function_definition.h
    lib/symbol/symbol.c
    lib/symbol/symbol.h
    lib/symbol/taint_mark.h
    lib/symbol/test.c
    lib/symbol/tmp.c
    lib/1.c
    lib/compiler_state.c
    lib/compiler_state.h
    lib/deal_arg.c
    lib/deal_arg.h
    lib/error.c
    lib/error.h
    lib/scope.c
    lib/scope.h
    lib/test.c
    tmp/0.c
    tmp/1.c
    tmp/2.c
    1.c
    10.c
    10else.c
    10if.c
    10while.c
    11.c
    1_3.c
    1_a.c
    1_b.c
    2.c
    2_1.c
    2_3.c
    2a.c
    3.c
    4.c
    5.c
    6.c
    a1.c
    a2.c
    a3.c
    aa1.c
    b.c
    b2.c
    bbb.c
    bbb1.c
    c.c
    c1.c
    cbison.tab.c
    cbison.tab.h
    d.c
    ddd.c
    e.c
    l1.c
    l2.c
    l3.c
    l4.c
    lex.yy.c
    plus.c
    statement.c
    strcmp.c
    t1.c
    t2.c
    t3.c
    test1.c)

add_executable(test3 ${SOURCE_FILES})